force-app/main/default/objects/Pay_Opportunity__c/Pay_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Pay Opportunity</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000000000}</displayFormat>
        <label>Pay Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pay Opportunity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>