force-app/main/default/objects/Pay_Opportunity__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <label>Booking</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pay Opportunity</relationshipLabel>
    <relationshipName>Pay_Opportunity</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>