force-app/main/default/objects/Pay_Opportunity__c/fields/Externalid__c.field-meta.xml
<CustomField>
    <fullName>Externalid__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>