force-app/main/default/objects/Pay_Opportunity__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <description>Salesforce lookup</description>
    <label>Payment</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Pay Opportunity</relationshipLabel>
    <relationshipName>Pay_Opportunity</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>